# usuarios-mcp

./: .gitignore  LICENSE  ONBOARDING_PROMPT.md  README.md  STARTER_KIT.md  install.sh  main.py  pyproject.toml
internal/mcp/: server.py  tools.py
internal/project/: config.py  profiles.py  research.py
internal/schema/: profile.py  validation.py
internal/templates/: defaults.py  engine.py
templates/: validate.md
usuarios_mcp/: __main__.py
usuarios_mcp/internal/mcp/: server.py  tools.py
usuarios_mcp/internal/schema/: patterns.py
usuarios_mcp/internal/templates/: engine.py
usuarios_mcp/templates/: analyze.md  generate.md
